--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tuhin Protfoliw</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Protfoliow</h1>
+    <section>
+        <div class="haf">
+            <h1>Welcome To </h1>
+            <h1><span class="name-highlight">Tuhin</span> Website</h1>
+            <h3>Wold Class Web Propassional Devoloper</h3>
+            <p>I can make website . I love this profational if i do batter then i can earn lot of maony.Online learning offers students the opportunity to work from the comfort of their bedrooms, on their couches, and in their living rooms. The rise of online learning classrooms and attending lectures virtually has only increased during this unprecedented time -- one of the main effects of COVID-19 for students in colleges and universities around the world.  </p>
+        </div>
+        <div class="haf">
+            <img src="images/1.jpg" alt="">
+        </div>
+    </section>
 </body>
 </html>
